# courses

./: .gitmodules  README.md
advanced-deployment-scenarios-with-tensorflow/: Makefile
asynchronous-programming-in-rust/: .gitignore
asynchronous-programming-in-rust/echo-server/: Cargo.toml
asynchronous-programming-in-rust/echo-server/src/: main.rs
asynchronous-programming-in-rust/main/: Cargo.toml
asynchronous-programming-in-rust/multiple-futures/: Cargo.toml
asynchronous-programming-in-rust/multiple-futures/src/: main.rs
bayesian-analysis-with-python/notebooks/: chapter-2.ipynb  chapter-5.ipynb  chapter-6.ipynb  chapter-7.ipynb
bayesian-analysis-with-python/src/: chapter-2.ipynb  chapter-3.ipynb
learning-rust-with-entirely-too-many-linked-lists/: Cargo.toml
learning-rust-with-entirely-too-many-linked-lists/src/: first.rs  second.rs
modern-c/level0/: first_example.c
reinforcement-learning/notes/: reinforcement-learning.org  reinforcement-learning.tex
rust-actix/actor-ping/: Cargo.toml
statistical-rethinking/: .pylintrc  Makefile  notes.org
statistical-rethinking/data/: 3H.yaml  islandsDistMatrix.txt
statistical-rethinking/notebooks/: chapter 11.ipynb  chapter-10.ipynb  chapter-12.ipynb  chapter-13.ipynb  chapter-14.ipynb  chapter-6.ipynb  chapter-7.ipynb  chapter-8.ipynb  experiments.ipynb
statistical-rethinking/requirements/: app.txt
statistical-rethinking/src/: chapter3.py  laplace.py
tensorflow-for-data-and-deployment/: Makefile
tensorflow-for-data-and-deployment/src/: simple.py
the-rust-programming-language/: .gitignore
(+69 files in other folders)
