[package]
name = "async-await-echo"
version = "0.1.0"
authors = ["Bart Frenk <bart.frenk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.2"
tokio = { version = "0.2.11", features = ["full"] }

failure = "0.1.6"
reqwest = "0.9.24"
