[package]
name = "multiple-futures"
version = "0.1.0"
authors = ["Bart Frenk <bart.frenk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
tokio = { version = "1.8.4", features = ["full"] }
